# postmerge-devnet

./: .autoenv.zsh  .env  README.md  beacon.py  deploy_contract.py  env.py  eth_executor.py  node_config.py  node_config_test.py  port_assignment.py  pyproject.toml  routine.py  run_devnet.py  terminals.py  validator.py
config/: genesis-work.json  genesis.json  prysm-work.yml  prysm.yml
contracts/simple_storage/: abi.json  bytecode  simple_storage.sol
keys-posdevnet/: key2.json  key3.json  key4.json
