[tool.poetry]
name = "postmerge-devnet"
version = "0.1.0"
description = ""
authors = ["noirgif"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^6.5.0"
fire = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
